# openmicc-server

./: .dockerignore  .gitignore  .sops.yaml  Cargo.toml  Dockerfile  Procfile  README.md  bacon.toml  flake.nix  secrets.yaml
.github/workflows/: cargo-build.yml  nix-build-docker.yml
nixos/: configuration.nix  flake.nix  result
packer/: nixos.pkr.hcl  packer.auto.pkrvars.hcl
patches/: mediasoup-sys.patch  update-cargo-lock.patch  wraps.nix
src/: constants.rs  greeter.rs  http_server.rs  lib.rs  main.rs  old.rs  redis_subscriber.rs  signup_list.rs  signup_list_entry.rs  signup_receipt.rs  stage.rs  user_session.rs  utils.rs
terraform/: .gitignore  main.tf  main.tf.bak
terraform/cloud-run/: .terraform.lock.hcl  main.tf
terraform/docker-openmicc-server/: main.tf
terraform/docker-test/: main.tf
terraform/github-secrets/: main.tf
terraform/kamatera-docker/: .terraform.lock.hcl  main.tf  old.tf.bak  outputs.tf  variables.tf
terraform/linode/: config.tf
