[package]
name = "openmicc-server"
version = "0.1.0"
authors = ["Oliver Evans <oliverevans96@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
anyhow = "1.0.65"
clap = { version="4.0.14", features = ["derive"] }
env_logger = "0.9.1"
futures = "0.3.24"
log_err = "1.1.1"
redis = { version = "0.21.6", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
thiserror = "1.0.37"
tokio = { version = "1", features = ["full"] }
websocket = "0.26.5"
