[package]
name = "openmicc-server"
version = "0.1.0"
authors = ["Oliver Evans <oliverevans96@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
anyhow = "1.0.65"
clap = { version = "3", features = ["derive", "env"] }
futures = "0.3.24"
hex = { version = "0.4.3", features = ["serde"] }
log_err = "1.1.1"
mediasoup = "0.11.0"
rand = "0.8.5"
redis = { version = "0.22", features = ["aio", "tokio-comp"] }
rustyline = "10.0.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-actix = "0.4.0"
tracing-subscriber = "0.3.16"
websocket = "0.26.5"
zstd = { version = "0.11.2", features = [ "pkg-config" ] }
